--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -14,25 +14,45 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin:0px;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  color: white;
 }
+
+p {
+  color: white;
+}
+
+.article-box {
+  border: 1px solid white;
+  margin: 20px;
+}
+
+ul {
+  padding:0
+}
+
+
+.nav-bar {
+  min-height: 30px;
+  width: 100vw;
+  margin: auto;
+  justify-content: space-between;
+  background-color: #61dafb;
+}
+
+.nav-list {
+  justify-content: space-evenly;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
