--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,26 @@
   text-align: center;
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  max-width: 100vw;
+  color: white
 }
 
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 500px) {
+  .article-list  {
+    flex-direction: column;
   }
 }
 
+.article-list {
+  max-width: 100vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .App-header {
+  max-width: 100vw;
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -24,15 +32,8 @@ h1 {
   padding: 10px;
 }
 
-h2 {
-  color: white;
-}
-
-p {
-  color: white;
-}
-
 .article-box {
+  width:400px;
   border: 1px solid white;
   margin: 20px;
 }
@@ -41,13 +42,12 @@ ul {
   padding:0
 }
 
-
 .nav-bar {
   min-height: 30px;
   width: 100vw;
   margin: auto;
   justify-content: space-between;
-  background-color: #61dafb;
+  background-color: #0fddb7;
 }
 
 .nav-list {
@@ -55,4 +55,111 @@ ul {
   padding-left: 20px;
   padding-right: 20px;
 }
+
+a {
+  color: white
+}
+
+a:hover{
+  color: white
+}
+
+.label {
+  color: white;
+  font-weight: bold;
+  margin:10px
+}
+
+.article {
+ text-align: left;
+ width: 70%;
+ border: 1px solid white;
+ margin-left: auto;
+ margin-right: auto;
+ margin-top: 20px;
+ margin-bottom:20px;
+ padding: 20px;
+ display: grid;
+ grid-template-columns: 1fr 2fr;
+ grid-template-areas:
+ "metadata title"
+ "article article";
+}
+
+.comment-list {
+  text-align: left;
+  width: 90%;
+  border: 1px solid white;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom:20px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-areas:
+  "meta1 body"
+  "meta2 body"
+  "meta3 body"
+}
+
+.comment-meta1 {
+  grid-area: meta1;
+  margin: 1px;
+}
+.comment-meta2 {
+  grid-area: meta2;
+  margin: 1px;
+}
+.comment-meta3 {
+  grid-area: meta3;
+  margin: 1px;
+}
+
+.comment-body {
+  grid-area: body
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  width: 30px;
+  height: 30px;
+}
+
+.metadata {
+  grid-area: metadata;
+  padding:10px;
+  border: 1px solid white;
+}
+
+.article-body{
+  margin-top: 10px;
+  grid-area: article;
+  grid-column: span 2;
+}
+
+.title{
+  text-align: center;
+  grid-area: title;
+  padding:20px;
+}
+
+.comments {
+  padding:20px;
+  width:70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  height: 500px;
+  overflow: auto;
+  border: 1px solid white;
+}
+
+.comment-input {
+  margin:20px
+}
+
 
