--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   background-color: #282c34;
   min-height: 100vh;
   max-width: 100vw;
-  color: white
+  color: white;
+  padding-bottom: 30px;
 }
 
 @media screen and (max-width: 500px) {
@@ -13,6 +14,7 @@
 }
 
 .article-list {
+  background-color: #282c34;
   max-width: 100vw;
   display: flex;
   flex-direction: row;
@@ -124,9 +126,10 @@ ul {
   list-style: none;
 }
 
-button {
-  width: 30px;
+input {
+  width: 50%;
   height: 30px;
+  margin: 10px;
 }
 
 .metadata {
