--- a/src/App.css
+++ b/src/App.css
@@ -244,7 +244,10 @@ input {
 }
 
 .label-login {
-  color: white
+  color: white;
+  font-size: medium;
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
 .metadata {
