--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #9facc5;
+  background-color: #282c34;
   min-height: 100vh;
   max-width: 100vw;
   color: white;
@@ -158,6 +158,7 @@ ul {
   padding-right:5%;
   padding-bottom: 5px;
   padding-top: 5px;
+  background-color: #074439;
 }
 
 a {
