--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ ul {
   padding-right:5%;
   padding-bottom: 5px;
   padding-top: 5px;
-  background-color: #074439;
+  color: #074439;
 }
 
 a {
